# ESET-Integration

./: COPYRIGHT  README.md
IBM QRadar/: README.md
IBM-QRadar/: README.md
Utilities/EdrRulesDb/: README.md  pyproject.toml
Utilities/EdrRulesDb/edr_rules_db/: __main__.py  config.conf  metrics.py
